--- a/config/samba.conf
+++ b/config/samba.conf
@@ -10,6 +10,7 @@ max log size = 1000
 logging = file
 panic action = /usr/share/samba/panic-action %d
 server role = standalone server
+passdb backend = tdbsam
 obey pam restrictions = yes
 unix password sync = yes
 passwd program = /usr/bin/passwd %u
