--- a/plexweb_apache.conf
+++ b/plexweb_apache.conf
@@ -1,6 +1,7 @@
 # phpMyAdmin default Apache configuration
 
-Alias /plex /home/bjorn/www/plex_web/html
+Alias /plex/videos/ "/home/bjorn/plex/XXX/"
+Alias /plex/ /home/bjorn/www/plex_web/html/
 
 <Directory /home/bjorn/www/plex_web/html/>
     Options all
@@ -14,10 +15,18 @@ Require all granted
 </Directory>
 
 # Disallow web access to directories that don't need it
+
 <Directory /home/bjorn/plex/XXX>
-    Order allow,deny
+    Options all
+    DirectoryIndex index.php
+   Order allow,deny
    Allow from all
+    # limit libapache2-mod-php to files and directories necessary by pma
 Require all granted
 
 
 </Directory>
+
+# Disallow web access to directories that don't need it
+
+
